--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -21,7 +21,6 @@ body {
   background-image: #0b111b;
 }
 
-
 .toggle-switch-bigger {
   position: relative;
   display: inline-block;
@@ -1045,15 +1044,17 @@ html::-webkit-scrollbar-thumb:hover {
   transition: opacity 0.3s ease-out;
 }
 
-
 .long-short-button {
   transition: background 0.3s ease-in-out;
 }
 
 .long-short-button:hover {
-  background: linear-gradient(180deg, rgba(67, 70, 101, 0), rgba(67, 70, 101, 0.13));
+  background: linear-gradient(
+    180deg,
+    rgba(67, 70, 101, 0),
+    rgba(67, 70, 101, 0.13)
+  );
 }
-
 
 .gradient-bgg:hover {
   background: linear-gradient(to top right, #2dac81, #0a724f);
