--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -21,6 +21,37 @@ body {
   background-image: #0b111b;
 }
 
+@keyframes slideIn {
+  from {
+    transform: translateY(20px);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+@keyframes slideOut {
+  from {
+    transform: translateY(0);
+    opacity: 1;
+  }
+  to {
+    transform: translateY(20px);
+    opacity: 0;
+  }
+}
+
+.notification-enter {
+  animation: slideIn 0.5s forwards;
+}
+
+.notification-exit {
+  animation: slideOut 0.5s forwards;
+}
+
+
 .toggle-switch-bigger {
   position: relative;
   display: inline-block;
