--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1159,6 +1159,22 @@ html::-webkit-scrollbar-thumb:hover {
   transition: transform 0.1s ease-out;
 }
 
+.custom-blur-circle {
+  background: radial-gradient(circle, rgba(67, 227, 166, 0.278), #000000 70%, transparent 70%);
+  /* Adjust your primary color and transparency in the radial-gradient */
+}
+
+.custom-blur-circle2 {
+  background: radial-gradient(circle at left, rgba(67, 227, 166, 0.15), #000000 43%, transparent 70%);
+  /* Adjust your primary color and transparency in the radial-gradient */
+}
+
+.custom-blur-circle3 {
+  background: radial-gradient(circle, rgba(67, 227, 166, 0.15), #000000 43%, transparent 70%);
+  /* Adjust your primary color and transparency in the radial-gradient */
+}
+
+
 /* Adjust gradient for smaller devices */
 @media only screen and (max-width: 776px) {
   .topg {
@@ -1178,7 +1194,37 @@ html::-webkit-scrollbar-thumb:hover {
       #000000 20%
     );
   }
+
+  .custom-blur-circle2 {
+    background: radial-gradient(circle at left, rgba(67, 227, 166, 0.167), #000000 60%, transparent 70%);
+    /* Adjust your primary color and transparency in the radial-gradient */
+  }
+
+  .custom-blur-circle3 {
+    background: radial-gradient(circle at right, rgba(67, 227, 166, 0.492), #000000 43%, transparent 70%);
+    /* Adjust your primary color and transparency in the radial-gradient */
+  }
 }
+
+.rellaxx {
+  position: absolute;
+  width: 100%;
+  height: 33%; /* Adjust this value if you're using a different height for larger screens */
+  top: 0;
+  left: 0;
+  z-index: 0;
+  border-radius: 50%;
+  overflow-x: hidden;
+  transform: translate(35%, 180%); /* Default value for mobile */
+}
+
+@media (min-width: 768px) { /* Adjust this breakpoint if needed */
+  .rellaxx {
+    height: 75%; /* Adjust for larger screens if necessary */
+    transform: translate(35%, 47%); /* Adjusted value for screens wider than 768px */
+  }
+}
+
 
 /* Adjust gradient for larger devices */
 @media only screen and (min-width: 777px) {
