--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Helvetica+Now+Display:wght@400;500;700&display=swap");
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -199,7 +197,7 @@ input:checked + .slider-bigger:before {
 
 @font-face {
   font-family: "BankGothic";
-  src: url("../../public/gothic.ttf") format("truetype");
+  src: url("../../public/helvetica.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
@@ -210,7 +208,7 @@ input:checked + .slider-bigger:before {
 
 @font-face {
   font-family: "BankGothicc";
-  src: url("../../public/gothicc.ttf") format("truetype");
+  src: url("../../public/helvetica.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
@@ -221,7 +219,7 @@ input:checked + .slider-bigger:before {
 
 @font-face {
   font-family: "Poppins";
-  src: url("../../public/Poppins-Light.ttf") format("truetype");
+  src: url("../../public/helvetica.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
