--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -224,6 +224,17 @@ input:checked + .slider-bigger:before {
   font-style: normal;
 }
 
+@font-face {
+  font-family: "Poppinsasdasd";
+  src: url("../../public/gothic.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+.font-poppinssad {
+  font-family: "Poppinsasdasd", "Arial", sans-serif;
+}
+
 .font-poppins {
   font-family: "Poppins", "Arial", sans-serif;
 }
