--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -27,6 +27,28 @@
   font-family: "Gilroy-SemiBold";
 }
 
+.button-wrapper {
+  position: relative;
+  display: inline-block;
+  overflow: hidden;
+}
+
+.wave-effect {
+  position: absolute;
+  border-radius: 50%;
+  background: #ffffff60; /* Adjust color as needed */
+  transform: scale(0);
+  animation: wave-animation 0.6s ease-out;
+  pointer-events: none; /* Makes sure the wave doesn't interfere with clicks */
+}
+
+@keyframes wave-animation {
+  to {
+    transform: scale(4);
+    opacity: 0;
+  }
+}
+
 /* Add this CSS to your stylesheet */
 .no-underline {
   text-decoration: none;
